--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,23 +9,23 @@
         android:id="@+id/navigation_home"
         android:name="com.example.hw9.ui.home.HomeFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/activity_home" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_headlines"
         android:name="com.example.hw9.ui.headlines.HeadlinesFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/activity_headlines" />
+        tools:layout="@layout/fragment_headlines" />
 
     <fragment
         android:id="@+id/navigation_trending"
         android:name="com.example.hw9.ui.trend.TrendFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/activity_trending" />
+        tools:layout="@layout/fragment_trending" />
     <fragment
         android:id="@+id/navigation_bookmarks"
         android:name="com.example.hw9.ui.bookmarks.BookmarksFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/activity_bookmarks" />
+        tools:layout="@layout/fragment_bookmarks" />
 
 </navigation>
